tests/ValidPrograms/Test15/Assignment.c
int main(){
	int a=0,b=3;
	int c;
	a=b=2;
	c=b=4+1;
	return a+b+c;//2+4+1+4=11
}
