tests/SemanticError/Fonctions/Test8/ReturnVariable.c
char fonction(){
	return 42;
}

int main(){
	int a;
	a=fonction();
	return a;
}
